--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
 	
 <div class="accessories">
 		<div class="access">
-        <img src="Images/_accessories.png" width="200" height="175" alt=""/>
+        <img src="Images/_accesss.png" width="200" height="175" alt=""/>
 	</div>
 	<div class="act">
 	  <h3>Accessories ($79)</h3>
